--- a/styles.css
+++ b/styles.css
@@ -183,3 +183,15 @@ label {
     border: 2px solid #9e9e9e;
   
 }
+
+
+.boton {
+  text-align: center;
+}
+
+.terms {
+  font-size: 0.8em;
+
+}
+
+.material-icons{font-size: 18px;}
